parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CONCAT
    DIVIDE
    DO
    DOT
    FOR
    MINUS
    MOD
    NOT
    OR
    PLUS
    POWER
    RETURN
    TIMES
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> LOCAL ID ASSIGN value
Rule 4     statement -> ID ASSIGN value
Rule 5     value -> NUMBER
Rule 6     value -> STRING
Rule 7     value -> TRUE
Rule 8     value -> FALSE
Rule 9     value -> NIL
Rule 10    value -> ID
Rule 11    expression -> expression GT expression
Rule 12    expression -> expression LT expression
Rule 13    expression -> expression GE expression
Rule 14    expression -> expression LE expression
Rule 15    expression -> expression EQ expression
Rule 16    expression -> expression NE expression
Rule 17    statement -> IF expression THEN program elseif_list else_part END
Rule 18    else_part -> ELSE program
Rule 19    else_part -> empty
Rule 20    elseif_list -> elseif_list elseif_clause
Rule 21    elseif_list -> empty
Rule 22    elseif_clause -> ELSEIF expression THEN program
Rule 23    expression -> NUMBER
Rule 24    expression -> STRING
Rule 25    expression -> TRUE
Rule 26    expression -> FALSE
Rule 27    expression -> ID
Rule 28    empty -> <empty>
Rule 29    statement -> FUNCTION ID LPAREN param_list RPAREN program END
Rule 30    param_list -> param_list COMMA ID
Rule 31    param_list -> ID
Rule 32    param_list -> empty
Rule 33    statement -> ID LPAREN print_args RPAREN
Rule 34    print_args -> print_args COMMA value
Rule 35    print_args -> value
Rule 36    print_args -> empty

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 3 4
COMMA                : 30 34
CONCAT               : 
DIVIDE               : 
DO                   : 
DOT                  : 
ELSE                 : 18
ELSEIF               : 22
END                  : 17 29
EQ                   : 15
FALSE                : 8 26
FOR                  : 
FUNCTION             : 29
GE                   : 13
GT                   : 11
ID                   : 3 4 10 27 29 30 31 33
IF                   : 17
LE                   : 14
LOCAL                : 3
LPAREN               : 29 33
LT                   : 12
MINUS                : 
MOD                  : 
NE                   : 16
NIL                  : 9
NOT                  : 
NUMBER               : 5 23
OR                   : 
PLUS                 : 
POWER                : 
RETURN               : 
RPAREN               : 29 33
STRING               : 6 24
THEN                 : 17 22
TIMES                : 
TRUE                 : 7 25
WHILE                : 
error                : 

Nonterminals, with rules where they appear

else_part            : 17
elseif_clause        : 20
elseif_list          : 17 20
empty                : 19 21 32 36
expression           : 11 11 12 12 13 13 14 14 15 15 16 16 17 22
param_list           : 29 30
print_args           : 33 34
program              : 1 17 18 22 29 0
statement            : 1 2
value                : 3 4 34 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . LOCAL ID ASSIGN value
    (4) statement -> . ID ASSIGN value
    (17) statement -> . IF expression THEN program elseif_list else_part END
    (29) statement -> . FUNCTION ID LPAREN param_list RPAREN program END
    (33) statement -> . ID LPAREN print_args RPAREN

    LOCAL           shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6

    program                        shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . LOCAL ID ASSIGN value
    (4) statement -> . ID ASSIGN value
    (17) statement -> . IF expression THEN program elseif_list else_part END
    (29) statement -> . FUNCTION ID LPAREN param_list RPAREN program END
    (33) statement -> . ID LPAREN print_args RPAREN

    LOCAL           shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6

    statement                      shift and go to state 7

state 2

    (2) program -> statement .

    LOCAL           reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    FUNCTION        reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    ELSE            reduce using rule 2 (program -> statement .)
    ELSEIF          reduce using rule 2 (program -> statement .)
    END             reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> LOCAL . ID ASSIGN value

    ID              shift and go to state 8


state 4

    (4) statement -> ID . ASSIGN value
    (33) statement -> ID . LPAREN print_args RPAREN

    ASSIGN          shift and go to state 9
    LPAREN          shift and go to state 10


state 5

    (17) statement -> IF . expression THEN program elseif_list else_part END
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 11

state 6

    (29) statement -> FUNCTION . ID LPAREN param_list RPAREN program END

    ID              shift and go to state 17


state 7

    (1) program -> program statement .

    LOCAL           reduce using rule 1 (program -> program statement .)
    ID              reduce using rule 1 (program -> program statement .)
    IF              reduce using rule 1 (program -> program statement .)
    FUNCTION        reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)
    ELSE            reduce using rule 1 (program -> program statement .)
    ELSEIF          reduce using rule 1 (program -> program statement .)
    END             reduce using rule 1 (program -> program statement .)


state 8

    (3) statement -> LOCAL ID . ASSIGN value

    ASSIGN          shift and go to state 18


state 9

    (4) statement -> ID ASSIGN . value
    (5) value -> . NUMBER
    (6) value -> . STRING
    (7) value -> . TRUE
    (8) value -> . FALSE
    (9) value -> . NIL
    (10) value -> . ID

    NUMBER          shift and go to state 21
    STRING          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NIL             shift and go to state 25
    ID              shift and go to state 19

    value                          shift and go to state 20

state 10

    (33) statement -> ID LPAREN . print_args RPAREN
    (34) print_args -> . print_args COMMA value
    (35) print_args -> . value
    (36) print_args -> . empty
    (5) value -> . NUMBER
    (6) value -> . STRING
    (7) value -> . TRUE
    (8) value -> . FALSE
    (9) value -> . NIL
    (10) value -> . ID
    (28) empty -> .

    NUMBER          shift and go to state 21
    STRING          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NIL             shift and go to state 25
    ID              shift and go to state 19
    RPAREN          reduce using rule 28 (empty -> .)
    COMMA           reduce using rule 28 (empty -> .)

    print_args                     shift and go to state 26
    value                          shift and go to state 27
    empty                          shift and go to state 28

state 11

    (17) statement -> IF expression . THEN program elseif_list else_part END
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

    THEN            shift and go to state 29
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35


state 12

    (23) expression -> NUMBER .

    THEN            reduce using rule 23 (expression -> NUMBER .)
    GT              reduce using rule 23 (expression -> NUMBER .)
    LT              reduce using rule 23 (expression -> NUMBER .)
    GE              reduce using rule 23 (expression -> NUMBER .)
    LE              reduce using rule 23 (expression -> NUMBER .)
    EQ              reduce using rule 23 (expression -> NUMBER .)
    NE              reduce using rule 23 (expression -> NUMBER .)


state 13

    (24) expression -> STRING .

    THEN            reduce using rule 24 (expression -> STRING .)
    GT              reduce using rule 24 (expression -> STRING .)
    LT              reduce using rule 24 (expression -> STRING .)
    GE              reduce using rule 24 (expression -> STRING .)
    LE              reduce using rule 24 (expression -> STRING .)
    EQ              reduce using rule 24 (expression -> STRING .)
    NE              reduce using rule 24 (expression -> STRING .)


state 14

    (25) expression -> TRUE .

    THEN            reduce using rule 25 (expression -> TRUE .)
    GT              reduce using rule 25 (expression -> TRUE .)
    LT              reduce using rule 25 (expression -> TRUE .)
    GE              reduce using rule 25 (expression -> TRUE .)
    LE              reduce using rule 25 (expression -> TRUE .)
    EQ              reduce using rule 25 (expression -> TRUE .)
    NE              reduce using rule 25 (expression -> TRUE .)


state 15

    (26) expression -> FALSE .

    THEN            reduce using rule 26 (expression -> FALSE .)
    GT              reduce using rule 26 (expression -> FALSE .)
    LT              reduce using rule 26 (expression -> FALSE .)
    GE              reduce using rule 26 (expression -> FALSE .)
    LE              reduce using rule 26 (expression -> FALSE .)
    EQ              reduce using rule 26 (expression -> FALSE .)
    NE              reduce using rule 26 (expression -> FALSE .)


state 16

    (27) expression -> ID .

    THEN            reduce using rule 27 (expression -> ID .)
    GT              reduce using rule 27 (expression -> ID .)
    LT              reduce using rule 27 (expression -> ID .)
    GE              reduce using rule 27 (expression -> ID .)
    LE              reduce using rule 27 (expression -> ID .)
    EQ              reduce using rule 27 (expression -> ID .)
    NE              reduce using rule 27 (expression -> ID .)


state 17

    (29) statement -> FUNCTION ID . LPAREN param_list RPAREN program END

    LPAREN          shift and go to state 36


state 18

    (3) statement -> LOCAL ID ASSIGN . value
    (5) value -> . NUMBER
    (6) value -> . STRING
    (7) value -> . TRUE
    (8) value -> . FALSE
    (9) value -> . NIL
    (10) value -> . ID

    NUMBER          shift and go to state 21
    STRING          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NIL             shift and go to state 25
    ID              shift and go to state 19

    value                          shift and go to state 37

state 19

    (10) value -> ID .

    LOCAL           reduce using rule 10 (value -> ID .)
    ID              reduce using rule 10 (value -> ID .)
    IF              reduce using rule 10 (value -> ID .)
    FUNCTION        reduce using rule 10 (value -> ID .)
    $end            reduce using rule 10 (value -> ID .)
    ELSE            reduce using rule 10 (value -> ID .)
    ELSEIF          reduce using rule 10 (value -> ID .)
    END             reduce using rule 10 (value -> ID .)
    RPAREN          reduce using rule 10 (value -> ID .)
    COMMA           reduce using rule 10 (value -> ID .)


state 20

    (4) statement -> ID ASSIGN value .

    LOCAL           reduce using rule 4 (statement -> ID ASSIGN value .)
    ID              reduce using rule 4 (statement -> ID ASSIGN value .)
    IF              reduce using rule 4 (statement -> ID ASSIGN value .)
    FUNCTION        reduce using rule 4 (statement -> ID ASSIGN value .)
    $end            reduce using rule 4 (statement -> ID ASSIGN value .)
    ELSE            reduce using rule 4 (statement -> ID ASSIGN value .)
    ELSEIF          reduce using rule 4 (statement -> ID ASSIGN value .)
    END             reduce using rule 4 (statement -> ID ASSIGN value .)


state 21

    (5) value -> NUMBER .

    LOCAL           reduce using rule 5 (value -> NUMBER .)
    ID              reduce using rule 5 (value -> NUMBER .)
    IF              reduce using rule 5 (value -> NUMBER .)
    FUNCTION        reduce using rule 5 (value -> NUMBER .)
    $end            reduce using rule 5 (value -> NUMBER .)
    ELSE            reduce using rule 5 (value -> NUMBER .)
    ELSEIF          reduce using rule 5 (value -> NUMBER .)
    END             reduce using rule 5 (value -> NUMBER .)
    RPAREN          reduce using rule 5 (value -> NUMBER .)
    COMMA           reduce using rule 5 (value -> NUMBER .)


state 22

    (6) value -> STRING .

    LOCAL           reduce using rule 6 (value -> STRING .)
    ID              reduce using rule 6 (value -> STRING .)
    IF              reduce using rule 6 (value -> STRING .)
    FUNCTION        reduce using rule 6 (value -> STRING .)
    $end            reduce using rule 6 (value -> STRING .)
    ELSE            reduce using rule 6 (value -> STRING .)
    ELSEIF          reduce using rule 6 (value -> STRING .)
    END             reduce using rule 6 (value -> STRING .)
    RPAREN          reduce using rule 6 (value -> STRING .)
    COMMA           reduce using rule 6 (value -> STRING .)


state 23

    (7) value -> TRUE .

    LOCAL           reduce using rule 7 (value -> TRUE .)
    ID              reduce using rule 7 (value -> TRUE .)
    IF              reduce using rule 7 (value -> TRUE .)
    FUNCTION        reduce using rule 7 (value -> TRUE .)
    $end            reduce using rule 7 (value -> TRUE .)
    ELSE            reduce using rule 7 (value -> TRUE .)
    ELSEIF          reduce using rule 7 (value -> TRUE .)
    END             reduce using rule 7 (value -> TRUE .)
    RPAREN          reduce using rule 7 (value -> TRUE .)
    COMMA           reduce using rule 7 (value -> TRUE .)


state 24

    (8) value -> FALSE .

    LOCAL           reduce using rule 8 (value -> FALSE .)
    ID              reduce using rule 8 (value -> FALSE .)
    IF              reduce using rule 8 (value -> FALSE .)
    FUNCTION        reduce using rule 8 (value -> FALSE .)
    $end            reduce using rule 8 (value -> FALSE .)
    ELSE            reduce using rule 8 (value -> FALSE .)
    ELSEIF          reduce using rule 8 (value -> FALSE .)
    END             reduce using rule 8 (value -> FALSE .)
    RPAREN          reduce using rule 8 (value -> FALSE .)
    COMMA           reduce using rule 8 (value -> FALSE .)


state 25

    (9) value -> NIL .

    LOCAL           reduce using rule 9 (value -> NIL .)
    ID              reduce using rule 9 (value -> NIL .)
    IF              reduce using rule 9 (value -> NIL .)
    FUNCTION        reduce using rule 9 (value -> NIL .)
    $end            reduce using rule 9 (value -> NIL .)
    ELSE            reduce using rule 9 (value -> NIL .)
    ELSEIF          reduce using rule 9 (value -> NIL .)
    END             reduce using rule 9 (value -> NIL .)
    RPAREN          reduce using rule 9 (value -> NIL .)
    COMMA           reduce using rule 9 (value -> NIL .)


state 26

    (33) statement -> ID LPAREN print_args . RPAREN
    (34) print_args -> print_args . COMMA value

    RPAREN          shift and go to state 38
    COMMA           shift and go to state 39


state 27

    (35) print_args -> value .

    RPAREN          reduce using rule 35 (print_args -> value .)
    COMMA           reduce using rule 35 (print_args -> value .)


state 28

    (36) print_args -> empty .

    RPAREN          reduce using rule 36 (print_args -> empty .)
    COMMA           reduce using rule 36 (print_args -> empty .)


state 29

    (17) statement -> IF expression THEN . program elseif_list else_part END
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . LOCAL ID ASSIGN value
    (4) statement -> . ID ASSIGN value
    (17) statement -> . IF expression THEN program elseif_list else_part END
    (29) statement -> . FUNCTION ID LPAREN param_list RPAREN program END
    (33) statement -> . ID LPAREN print_args RPAREN

    LOCAL           shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6

    program                        shift and go to state 40
    statement                      shift and go to state 2

state 30

    (11) expression -> expression GT . expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 41

state 31

    (12) expression -> expression LT . expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 42

state 32

    (13) expression -> expression GE . expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 43

state 33

    (14) expression -> expression LE . expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 44

state 34

    (15) expression -> expression EQ . expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 45

state 35

    (16) expression -> expression NE . expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . ID

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    ID              shift and go to state 16

    expression                     shift and go to state 46

state 36

    (29) statement -> FUNCTION ID LPAREN . param_list RPAREN program END
    (30) param_list -> . param_list COMMA ID
    (31) param_list -> . ID
    (32) param_list -> . empty
    (28) empty -> .

    ID              shift and go to state 47
    RPAREN          reduce using rule 28 (empty -> .)
    COMMA           reduce using rule 28 (empty -> .)

    param_list                     shift and go to state 48
    empty                          shift and go to state 49

state 37

    (3) statement -> LOCAL ID ASSIGN value .

    LOCAL           reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    ID              reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    IF              reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    FUNCTION        reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    $end            reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    ELSE            reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    ELSEIF          reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)
    END             reduce using rule 3 (statement -> LOCAL ID ASSIGN value .)


state 38

    (33) statement -> ID LPAREN print_args RPAREN .

    LOCAL           reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    ID              reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    IF              reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    FUNCTION        reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    $end            reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    ELSE            reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    ELSEIF          reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)
    END             reduce using rule 33 (statement -> ID LPAREN print_args RPAREN .)


state 39

    (34) print_args -> print_args COMMA . value
    (5) value -> . NUMBER
    (6) value -> . STRING
    (7) value -> . TRUE
    (8) value -> . FALSE
    (9) value -> . NIL
    (10) value -> . ID

    NUMBER          shift and go to state 21
    STRING          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NIL             shift and go to state 25
    ID              shift and go to state 19

    value                          shift and go to state 50

state 40

    (17) statement -> IF expression THEN program . elseif_list else_part END
    (1) program -> program . statement
    (20) elseif_list -> . elseif_list elseif_clause
    (21) elseif_list -> . empty
    (3) statement -> . LOCAL ID ASSIGN value
    (4) statement -> . ID ASSIGN value
    (17) statement -> . IF expression THEN program elseif_list else_part END
    (29) statement -> . FUNCTION ID LPAREN param_list RPAREN program END
    (33) statement -> . ID LPAREN print_args RPAREN
    (28) empty -> .

    LOCAL           shift and go to state 3
    ID              shift and go to state 4
    IF              shift and go to state 5
    FUNCTION        shift and go to state 6
    ELSE            reduce using rule 28 (empty -> .)
    ELSEIF          reduce using rule 28 (empty -> .)
    END             reduce using rule 28 (empty -> .)

    elseif_list                    shift and go to state 51
    statement                      shift and go to state 7
    empty                          shift and go to state 52

state 41

    (11) expression -> expression GT expression .
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    THEN            reduce using rule 11 (expression -> expression GT expression .)
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35

  ! GT              [ reduce using rule 11 (expression -> expression GT expression .) ]
  ! LT              [ reduce using rule 11 (expression -> expression GT expression .) ]
  ! GE              [ reduce using rule 11 (expression -> expression GT expression .) ]
  ! LE              [ reduce using rule 11 (expression -> expression GT expression .) ]
  ! EQ              [ reduce using rule 11 (expression -> expression GT expression .) ]
  ! NE              [ reduce using rule 11 (expression -> expression GT expression .) ]


state 42

    (12) expression -> expression LT expression .
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    THEN            reduce using rule 12 (expression -> expression LT expression .)
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35

  ! GT              [ reduce using rule 12 (expression -> expression LT expression .) ]
  ! LT              [ reduce using rule 12 (expression -> expression LT expression .) ]
  ! GE              [ reduce using rule 12 (expression -> expression LT expression .) ]
  ! LE              [ reduce using rule 12 (expression -> expression LT expression .) ]
  ! EQ              [ reduce using rule 12 (expression -> expression LT expression .) ]
  ! NE              [ reduce using rule 12 (expression -> expression LT expression .) ]


state 43

    (13) expression -> expression GE expression .
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    THEN            reduce using rule 13 (expression -> expression GE expression .)
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35

  ! GT              [ reduce using rule 13 (expression -> expression GE expression .) ]
  ! LT              [ reduce using rule 13 (expression -> expression GE expression .) ]
  ! GE              [ reduce using rule 13 (expression -> expression GE expression .) ]
  ! LE              [ reduce using rule 13 (expression -> expression GE expression .) ]
  ! EQ              [ reduce using rule 13 (expression -> expression GE expression .) ]
  ! NE              [ reduce using rule 13 (expression -> expression GE expression .) ]


state 44

    (14) expression -> expression LE expression .
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    THEN            reduce using rule 14 (expression -> expression LE expression .)
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35

  ! GT              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! LT              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! GE              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! LE              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! EQ              [ reduce using rule 14 (expression -> expression LE expression .) ]
  ! NE              [ reduce using rule 14 (expression -> expression LE expression .) ]


state 45

    (15) expression -> expression EQ expression .
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    THEN            reduce using rule 15 (expression -> expression EQ expression .)
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35

  ! GT              [ reduce using rule 15 (expression -> expression EQ expression .) ]
  ! LT              [ reduce using rule 15 (expression -> expression EQ expression .) ]
  ! GE              [ reduce using rule 15 (expression -> expression EQ expression .) ]
  ! LE              [ reduce using rule 15 (expression -> expression EQ expression .) ]
  ! EQ              [ reduce using rule 15 (expression -> expression EQ expression .) ]
  ! NE              [ reduce using rule 15 (expression -> expression EQ expression .) ]


state 46

    (16) expression -> expression NE expression .
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    THEN            reduce using rule 16 (expression -> expression NE expression .)
    GT              shift and go to state 30
    LT              shift and go to state 31
    GE              shift and go to state 32
    LE              shift and go to state 33
    EQ              shift and go to state 34
    NE              shift and go to state 35
